// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RecentlyLikedTileFeed renders a RecentlyLikedTileFeed 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      horizontal={false}
      style={
        Object {
          "paddingHorizontal": 0,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingLeft": 16,
            "paddingTop": 8,
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "flexGrow": 2,
            }
          }
        >
          <Text
            style={
              Object {
                "color": "#303030",
                "fontFamily": "InterUI-Medium",
                "fontSize": 14,
                "lineHeight": 20.16,
              }
            }
          >
            Liked Content
          </Text>
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "padding": 16,
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#505050",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 12,
                  "lineHeight": 17.28,
                }
              }
            >
              <Text
                style={
                  Object {
                    "color": "#17B582",
                  }
                }
              >
                View All
              </Text>
            </Text>
          </View>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          Object {
            "padding": 8,
            "paddingBottom": 0,
          }
        }
        data={
          Array [
            Object {
              "__typename": "UniversalContentItem",
              "coverImage": Object {
                "sources": Array [
                  Object {
                    "uri": "https://apollosrock.newspring.cc/GetImage.ashx?guid=55be1fd5-d8eb-43a6-aa70-f8e27bb63d31",
                  },
                ],
              },
              "id": "UniversalContentItem:4148aeb9482181025e9cad42826e676a",
              "sharing": Object {
                "message": "",
                "title": "Making Prayer a Spiritual Habit",
                "url": "https://apollosrock.newspring.cc/",
              },
              "title": "Making Prayer a Spiritual Habit",
            },
            Object {
              "__typename": "UniversalContentItem",
              "coverImage": Object {
                "sources": Array [
                  Object {
                    "uri": "https://apollosrock.newspring.cc/GetImage.ashx?guid=993efb47-47ec-4dec-a3d3-47bcacfbd58e",
                  },
                ],
              },
              "id": "UniversalContentItem:9dbdc4e565dcaa3c9b17eb5ae42de96e",
              "sharing": Object {
                "message": "",
                "title": "Vacations and Your Budget",
                "url": "https://apollosrock.newspring.cc/",
              },
              "title": "Vacations and Your Budget",
            },
          ]
        }
        decelerationRate="fast"
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={true}
        initialNumToRender={5}
        initialScrollIndex={0}
        keyExtractor={[Function]}
        loadingStateObject={
          Object {
            "coverImage": Array [],
            "id": "fake_id",
            "title": "",
          }
        }
        maxToRenderPerBatch={10}
        numColumns={1}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        refreshing={false}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        showsHorizontalScrollIndicator={false}
        snapToAlignment="start"
        snapToInterval={512}
        stickyHeaderIndices={Array []}
        style={
          Object {
            "marginTop": -20,
            "zIndex": 1,
          }
        }
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <View
                forceRatio={1}
                inHorizontalList={true}
                isLoading={true}
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 16,
                    "margin": 8,
                    "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 6,
                    "width": 495,
                  }
                }
                tile={true}
              >
                <View
                  forceRatio={1}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "borderRadius": 16,
                      "overflow": "hidden",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "aspectRatio": 2,
                        "backgroundColor": "#A5A5A5",
                        "overflow": "hidden",
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      animate={null}
                      customAnimate={null}
                      onReady={false}
                      style={
                        Object {
                          "aspectRatio": 1,
                          "backgroundColor": "#A5A5A5",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={Array []}
                        style={
                          Object {
                            "aspectRatio": 2,
                            "backgroundColor": "#A5A5A5",
                            "opacity": 0,
                            "resizeMode": "cover",
                            "width": "100%",
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "paddingBottom": 12,
                        "paddingHorizontal": 16,
                        "paddingTop": 16,
                        "paddingVertical": 16,
                      }
                    }
                    tile={true}
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 16,
                          "marginVertical": 3.5199999999999996,
                          "width": "80%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 12,
                          "marginVertical": 2.6400000000000006,
                          "width": "50%",
                        }
                      }
                    />
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "height": 32,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 16,
                        "paddingTop": 0,
                        "paddingVertical": 16,
                      }
                    }
                  />
                  <View
                    floating={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "bottom": 0,
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "space-between",
                        "left": 0,
                        "paddingHorizontal": 16,
                        "paddingTop": 0,
                        "paddingVertical": 16,
                        "position": "absolute",
                        "right": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                        }
                      }
                    >
                      <View
                        flexed={false}
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": null,
                            "flexDirection": "row",
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={19.2}
                          bbWidth={19.2}
                          height={19.2}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              undefined,
                              null,
                              Object {
                                "flex": 0,
                                "height": 19,
                                "width": 19,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={19.2}
                        >
                          <RNSVGGroup
                            fill={
                              Array [
                                0,
                                4278190080,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            font={Object {}}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={Array []}
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          >
                            <RNSVGPath
                              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
                              fill={
                                Array [
                                  0,
                                  4289045925,
                                ]
                              }
                              fillOpacity={1}
                              fillRule={1}
                              matrix={
                                Array [
                                  1,
                                  0,
                                  0,
                                  1,
                                  0,
                                  0,
                                ]
                              }
                              opacity={1}
                              originX={0}
                              originY={0}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                              rotation={0}
                              scaleX={1}
                              scaleY={1}
                              skewX={0}
                              skewY={0}
                              stroke={null}
                              strokeDasharray={null}
                              strokeDashoffset={null}
                              strokeLinecap={0}
                              strokeLinejoin={0}
                              strokeMiterlimit={4}
                              strokeOpacity={1}
                              strokeWidth={1}
                              vectorEffect={0}
                              x={0}
                              y={0}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            Object {
                              "paddingHorizontal": 4,
                            }
                          }
                          withIcon="like"
                        >
                          <Text
                            style={
                              Object {
                                "color": "#A5A5A5",
                                "fontFamily": "InterUI-Bold",
                                "fontSize": 12,
                                "lineHeight": 17.28,
                              }
                            }
                            tint="#A5A5A5"
                          >
                            0
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <View
                forceRatio={1}
                inHorizontalList={true}
                isLoading={true}
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 16,
                    "margin": 8,
                    "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 6,
                    "width": 495,
                  }
                }
                tile={true}
              >
                <View
                  forceRatio={1}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "borderRadius": 16,
                      "overflow": "hidden",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "aspectRatio": 2,
                        "backgroundColor": "#A5A5A5",
                        "overflow": "hidden",
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      animate={null}
                      customAnimate={null}
                      onReady={false}
                      style={
                        Object {
                          "aspectRatio": 1,
                          "backgroundColor": "#A5A5A5",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={Array []}
                        style={
                          Object {
                            "aspectRatio": 2,
                            "backgroundColor": "#A5A5A5",
                            "opacity": 0,
                            "resizeMode": "cover",
                            "width": "100%",
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "paddingBottom": 12,
                        "paddingHorizontal": 16,
                        "paddingTop": 16,
                        "paddingVertical": 16,
                      }
                    }
                    tile={true}
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 16,
                          "marginVertical": 3.5199999999999996,
                          "width": "80%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 12,
                          "marginVertical": 2.6400000000000006,
                          "width": "50%",
                        }
                      }
                    />
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "height": 32,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 16,
                        "paddingTop": 0,
                        "paddingVertical": 16,
                      }
                    }
                  />
                  <View
                    floating={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "bottom": 0,
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "space-between",
                        "left": 0,
                        "paddingHorizontal": 16,
                        "paddingTop": 0,
                        "paddingVertical": 16,
                        "position": "absolute",
                        "right": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                        }
                      }
                    >
                      <View
                        flexed={false}
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": null,
                            "flexDirection": "row",
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={19.2}
                          bbWidth={19.2}
                          height={19.2}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              undefined,
                              null,
                              Object {
                                "flex": 0,
                                "height": 19,
                                "width": 19,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={19.2}
                        >
                          <RNSVGGroup
                            fill={
                              Array [
                                0,
                                4278190080,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            font={Object {}}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={Array []}
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          >
                            <RNSVGPath
                              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
                              fill={
                                Array [
                                  0,
                                  4289045925,
                                ]
                              }
                              fillOpacity={1}
                              fillRule={1}
                              matrix={
                                Array [
                                  1,
                                  0,
                                  0,
                                  1,
                                  0,
                                  0,
                                ]
                              }
                              opacity={1}
                              originX={0}
                              originY={0}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                              rotation={0}
                              scaleX={1}
                              scaleY={1}
                              skewX={0}
                              skewY={0}
                              stroke={null}
                              strokeDasharray={null}
                              strokeDashoffset={null}
                              strokeLinecap={0}
                              strokeLinejoin={0}
                              strokeMiterlimit={4}
                              strokeOpacity={1}
                              strokeWidth={1}
                              vectorEffect={0}
                              x={0}
                              y={0}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            Object {
                              "paddingHorizontal": 4,
                            }
                          }
                          withIcon="like"
                        >
                          <Text
                            style={
                              Object {
                                "color": "#A5A5A5",
                                "fontFamily": "InterUI-Bold",
                                "fontSize": 12,
                                "lineHeight": 17.28,
                              }
                            }
                            tint="#A5A5A5"
                          >
                            0
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTSafeAreaView>
`;

exports[`RecentlyLikedTileFeed renders a loading state 1`] = `
<RCTSafeAreaView
  emulateUnlessSupported={true}
  onLayout={[Function]}
  style={
    Object {
      "bottom": 0,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
    }
  }
>
  <View
    onLayout={[Function]}
    style={
      Object {
        "flex": 1,
      }
    }
  />
  <View
    style={
      Object {
        "bottom": 0,
        "left": 0,
        "position": "absolute",
        "right": 0,
        "top": 0,
      }
    }
  >
    <View
      horizontal={false}
      style={
        Object {
          "paddingHorizontal": 0,
          "paddingVertical": 16,
        }
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "justifyContent": "space-between",
            "paddingLeft": 16,
            "paddingTop": 8,
            "zIndex": 2,
          }
        }
      >
        <View
          style={
            Object {
              "flexGrow": 2,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "stretch",
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 14,
                "marginVertical": 3.08,
                "width": "60%",
              }
            }
          />
        </View>
        <View
          accessible={true}
          isTVSelectable={true}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-end",
                "padding": 16,
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 12,
                  "marginVertical": 2.6400000000000006,
                  "width": "50%",
                }
              }
            />
          </View>
        </View>
      </View>
      <RCTScrollView
        contentContainerStyle={
          Object {
            "padding": 8,
            "paddingBottom": 0,
          }
        }
        data={
          Array [
            Object {
              "coverImage": Object {
                "sources": Array [
                  Object {
                    "uri": "https://apollosrock.newspring.cc/GetImage.ashx?guid=55be1fd5-d8eb-43a6-aa70-f8e27bb63d31",
                  },
                ],
              },
              "id": "UniversalContentItem:4148aeb9482181025e9cad42826e676a",
              "sharing": Object {
                "message": "",
                "title": "Making Prayer a Spiritual Habit",
                "url": "https://apollosrock.newspring.cc/",
              },
              "title": "Making Prayer a Spiritual Habit",
            },
            Object {
              "coverImage": Object {
                "sources": Array [
                  Object {
                    "uri": "https://apollosrock.newspring.cc/GetImage.ashx?guid=993efb47-47ec-4dec-a3d3-47bcacfbd58e",
                  },
                ],
              },
              "id": "UniversalContentItem:9dbdc4e565dcaa3c9b17eb5ae42de96e",
              "sharing": Object {
                "message": "",
                "title": "Vacations and Your Budget",
                "url": "https://apollosrock.newspring.cc/",
              },
              "title": "Vacations and Your Budget",
            },
          ]
        }
        decelerationRate="fast"
        disableVirtualization={false}
        getItem={[Function]}
        getItemCount={[Function]}
        horizontal={true}
        initialNumToRender={5}
        initialScrollIndex={0}
        keyExtractor={[Function]}
        loadingStateObject={
          Object {
            "coverImage": Array [],
            "id": "fake_id",
            "title": "",
          }
        }
        maxToRenderPerBatch={10}
        numColumns={1}
        onContentSizeChange={[Function]}
        onEndReachedThreshold={2}
        onLayout={[Function]}
        onMomentumScrollEnd={[Function]}
        onScroll={[Function]}
        onScrollBeginDrag={[Function]}
        onScrollEndDrag={[Function]}
        refreshing={true}
        removeClippedSubviews={false}
        renderItem={[Function]}
        scrollEventThrottle={50}
        showsHorizontalScrollIndicator={false}
        snapToAlignment="start"
        snapToInterval={512}
        stickyHeaderIndices={Array []}
        style={
          Object {
            "marginTop": -20,
            "zIndex": 1,
          }
        }
        updateCellsBatchingPeriod={50}
        viewabilityConfigCallbackPairs={Array []}
        windowSize={21}
      >
        <View>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <View
                forceRatio={1}
                inHorizontalList={true}
                isLoading={true}
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 16,
                    "margin": 8,
                    "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 6,
                    "width": 495,
                  }
                }
                tile={true}
              >
                <View
                  forceRatio={1}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "borderRadius": 16,
                      "overflow": "hidden",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "aspectRatio": 2,
                        "backgroundColor": "#A5A5A5",
                        "overflow": "hidden",
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      animate={null}
                      customAnimate={null}
                      onReady={false}
                      style={
                        Object {
                          "aspectRatio": 1,
                          "backgroundColor": "#A5A5A5",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={Array []}
                        style={
                          Object {
                            "aspectRatio": 2,
                            "backgroundColor": "#A5A5A5",
                            "opacity": 0,
                            "resizeMode": "cover",
                            "width": "100%",
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "paddingBottom": 12,
                        "paddingHorizontal": 16,
                        "paddingTop": 16,
                        "paddingVertical": 16,
                      }
                    }
                    tile={true}
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 16,
                          "marginVertical": 3.5199999999999996,
                          "width": "80%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 12,
                          "marginVertical": 2.6400000000000006,
                          "width": "50%",
                        }
                      }
                    />
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "height": 32,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 16,
                        "paddingTop": 0,
                        "paddingVertical": 16,
                      }
                    }
                  />
                  <View
                    floating={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "bottom": 0,
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "space-between",
                        "left": 0,
                        "paddingHorizontal": 16,
                        "paddingTop": 0,
                        "paddingVertical": 16,
                        "position": "absolute",
                        "right": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                        }
                      }
                    >
                      <View
                        flexed={false}
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": null,
                            "flexDirection": "row",
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={19.2}
                          bbWidth={19.2}
                          height={19.2}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              undefined,
                              null,
                              Object {
                                "flex": 0,
                                "height": 19,
                                "width": 19,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={19.2}
                        >
                          <RNSVGGroup
                            fill={
                              Array [
                                0,
                                4278190080,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            font={Object {}}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={Array []}
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          >
                            <RNSVGPath
                              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
                              fill={
                                Array [
                                  0,
                                  4289045925,
                                ]
                              }
                              fillOpacity={1}
                              fillRule={1}
                              matrix={
                                Array [
                                  1,
                                  0,
                                  0,
                                  1,
                                  0,
                                  0,
                                ]
                              }
                              opacity={1}
                              originX={0}
                              originY={0}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                              rotation={0}
                              scaleX={1}
                              scaleY={1}
                              skewX={0}
                              skewY={0}
                              stroke={null}
                              strokeDasharray={null}
                              strokeDashoffset={null}
                              strokeLinecap={0}
                              strokeLinejoin={0}
                              strokeMiterlimit={4}
                              strokeOpacity={1}
                              strokeWidth={1}
                              vectorEffect={0}
                              x={0}
                              y={0}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            Object {
                              "paddingHorizontal": 4,
                            }
                          }
                          withIcon="like"
                        >
                          <Text
                            style={
                              Object {
                                "color": "#A5A5A5",
                                "fontFamily": "InterUI-Bold",
                                "fontSize": 12,
                                "lineHeight": 17.28,
                              }
                            }
                            tint="#A5A5A5"
                          >
                            0
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
          <View
            onLayout={[Function]}
            style={
              Array [
                Object {
                  "flexDirection": "row",
                },
                null,
              ]
            }
          >
            <View
              accessible={true}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              style={
                Object {
                  "transform": Array [
                    Object {
                      "scale": 1,
                    },
                  ],
                }
              }
            >
              <View
                forceRatio={1}
                inHorizontalList={true}
                isLoading={true}
                style={
                  Object {
                    "aspectRatio": 1,
                    "backgroundColor": "#FFFFFF",
                    "borderRadius": 16,
                    "margin": 8,
                    "shadowColor": "rgba(165, 165, 165, 0.30000000000000004)",
                    "shadowOffset": Object {
                      "height": 1,
                      "width": 0,
                    },
                    "shadowOpacity": 1,
                    "shadowRadius": 6,
                    "width": 495,
                  }
                }
                tile={true}
              >
                <View
                  forceRatio={1}
                  style={
                    Object {
                      "aspectRatio": 1,
                      "borderRadius": 16,
                      "overflow": "hidden",
                    }
                  }
                >
                  <View
                    style={
                      Object {
                        "aspectRatio": 2,
                        "backgroundColor": "#A5A5A5",
                        "overflow": "hidden",
                        "width": "100%",
                      }
                    }
                  >
                    <View
                      animate={null}
                      customAnimate={null}
                      onReady={false}
                      style={
                        Object {
                          "aspectRatio": 1,
                          "backgroundColor": "#A5A5A5",
                          "width": "100%",
                        }
                      }
                    >
                      <Image
                        onLoad={[Function]}
                        source={Array []}
                        style={
                          Object {
                            "aspectRatio": 2,
                            "backgroundColor": "#A5A5A5",
                            "opacity": 0,
                            "resizeMode": "cover",
                            "width": "100%",
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Object {
                        "paddingBottom": 12,
                        "paddingHorizontal": 16,
                        "paddingTop": 16,
                        "paddingVertical": 16,
                      }
                    }
                    tile={true}
                  >
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 16,
                          "marginVertical": 3.5199999999999996,
                          "width": "80%",
                        }
                      }
                    />
                    <View
                      style={
                        Object {
                          "alignSelf": "stretch",
                          "backgroundColor": "#A5A5A5",
                          "borderRadius": 16,
                          "height": 12,
                          "marginVertical": 2.6400000000000006,
                          "width": "50%",
                        }
                      }
                    />
                  </View>
                  <View
                    style={
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "height": 32,
                        "justifyContent": "space-between",
                        "paddingHorizontal": 16,
                        "paddingTop": 0,
                        "paddingVertical": 16,
                      }
                    }
                  />
                  <View
                    floating={true}
                    style={
                      Object {
                        "alignItems": "center",
                        "bottom": 0,
                        "flexDirection": "row",
                        "flexWrap": "wrap",
                        "justifyContent": "space-between",
                        "left": 0,
                        "paddingHorizontal": 16,
                        "paddingTop": 0,
                        "paddingVertical": 16,
                        "position": "absolute",
                        "right": 0,
                      }
                    }
                  >
                    <View
                      style={
                        Object {
                          "flexDirection": "column",
                        }
                      }
                    >
                      <View
                        flexed={false}
                        style={
                          Object {
                            "alignItems": "center",
                            "flex": null,
                            "flexDirection": "row",
                          }
                        }
                      >
                        <RNSVGSvgView
                          align="xMidYMid"
                          bbHeight={19.2}
                          bbWidth={19.2}
                          height={19.2}
                          meetOrSlice={0}
                          minX={0}
                          minY={0}
                          style={
                            Array [
                              Object {
                                "backgroundColor": "transparent",
                                "borderWidth": 0,
                              },
                              undefined,
                              null,
                              Object {
                                "flex": 0,
                                "height": 19,
                                "width": 19,
                              },
                            ]
                          }
                          vbHeight={24}
                          vbWidth={24}
                          width={19.2}
                        >
                          <RNSVGGroup
                            fill={
                              Array [
                                0,
                                4278190080,
                              ]
                            }
                            fillOpacity={1}
                            fillRule={1}
                            font={Object {}}
                            matrix={
                              Array [
                                1,
                                0,
                                0,
                                1,
                                0,
                                0,
                              ]
                            }
                            opacity={1}
                            originX={0}
                            originY={0}
                            propList={Array []}
                            rotation={0}
                            scaleX={1}
                            scaleY={1}
                            skewX={0}
                            skewY={0}
                            stroke={null}
                            strokeDasharray={null}
                            strokeDashoffset={null}
                            strokeLinecap={0}
                            strokeLinejoin={0}
                            strokeMiterlimit={4}
                            strokeOpacity={1}
                            strokeWidth={1}
                            vectorEffect={0}
                            x={0}
                            y={0}
                          >
                            <RNSVGPath
                              d="M13.13 20.2h-2.26l1.4-1.4.03-.02.03-.03c6.37-5.6 8.06-7.67 8.06-10.27 0-2.2-1.7-3.9-3.9-3.9-1.23 0-2.48.6-3.28 1.54L12 7.57l-1.23-1.45C9.97 5.18 8.72 4.6 7.5 4.6c-2.2 0-3.9 1.67-3.9 3.88 0 2.6 1.7 4.66 8.07 10.27l.03.03.04.03 1.4 1.4zM10.8 4.03l-.03.03h.1c.4.3.8.64 1.13 1.03.33-.4.72-.75 1.14-1.05h.1c-.02 0-.03-.02-.04-.03.97-.66 2.13-1.03 3.3-1.03C19.6 3 22 5.4 22 8.47c0 3.8-3.4 6.88-8.6 11.46l-1.4 1.4-1.4-1.4C5.4 15.36 2 12.27 2 8.48 2 5.38 4.4 3 7.5 3c1.17 0 2.33.37 3.3 1.03z"
                              fill={
                                Array [
                                  0,
                                  4289045925,
                                ]
                              }
                              fillOpacity={1}
                              fillRule={1}
                              matrix={
                                Array [
                                  1,
                                  0,
                                  0,
                                  1,
                                  0,
                                  0,
                                ]
                              }
                              opacity={1}
                              originX={0}
                              originY={0}
                              propList={
                                Array [
                                  "fill",
                                ]
                              }
                              rotation={0}
                              scaleX={1}
                              scaleY={1}
                              skewX={0}
                              skewY={0}
                              stroke={null}
                              strokeDasharray={null}
                              strokeDashoffset={null}
                              strokeLinecap={0}
                              strokeLinejoin={0}
                              strokeMiterlimit={4}
                              strokeOpacity={1}
                              strokeWidth={1}
                              vectorEffect={0}
                              x={0}
                              y={0}
                            />
                          </RNSVGGroup>
                        </RNSVGSvgView>
                        <View
                          style={
                            Object {
                              "paddingHorizontal": 4,
                            }
                          }
                          withIcon="like"
                        >
                          <Text
                            style={
                              Object {
                                "color": "#A5A5A5",
                                "fontFamily": "InterUI-Bold",
                                "fontSize": 12,
                                "lineHeight": 17.28,
                              }
                            }
                            tint="#A5A5A5"
                          >
                            0
                          </Text>
                        </View>
                      </View>
                    </View>
                  </View>
                </View>
              </View>
            </View>
          </View>
        </View>
      </RCTScrollView>
    </View>
  </View>
</RCTSafeAreaView>
`;
